# CalculatorRAMPA_ITI

./: .gitignore  CMakeLists.txt  README.md  config_generate.cmake  gencfg.py  main.c
Division/: CMakeLists.txt  README.md
Division/inc/: Divide.h
Division/src/: Divide.c
ModulusModule/: CMakeLists.txt
ModulusModule/inc/: ModulusFeature.h
ModulusModule/src/: ModulusFeature.c
Scripts/: GenerateConfig.cmake  gencfg.py
Sum/: CMakeLists.txt
Sum/inc/: sum.h
Sum/src/: sum.c
multiplication/: CMakeLists.txt
multiplication/inc/: multiplication.h
multiplication/src/: multiplication.c
subtraction/: CMakeLists.txt
subtraction/inc/: subtraction.h
subtraction/src/: subtraction.c
